# fastapi-challenge

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  test_api.py
alembic/: env.py
alembic/versions/: 672e9d6974da_initial_migration.py
app/: main.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  task.py  user.py
app/routers/: __init__.py  auth.py  favorites.py  pokemon.py  tasks.py  users.py
app/schemas/: __init__.py  task.py  user.py
app/tests/: conftest.py  test_auth.py  test_main.py  test_tasks.py
