[project]
name = "fastapi-interview"
version = "0.1.0"
description = "FastAPI Interview Project"
requires-python = ">=3.9"
authors = [{ name = "Interview Team", email = "interview@company.com" }]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
